k8s/patience.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patience-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patience
  template:
    metadata:
      labels:
        app: patience
    spec:
      containers:
      - name: patience-container
        imagePullPolicy: "Always"
        image: flawlesslt/patience:latest
        ports:
          - containerPort: 80
        volumeMounts:
          - name: config-volume
            readOnly: true
            mountPath: /etc/patience.edn
            subPath: patience.edn
      volumes:
        - name: config-volume
          configMap:
            name: patience-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: patience-svc
  labels:
    app: patience
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: patience
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patience-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: patience.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: patience-svc
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
